--- a/app/src/main/res/layout/history_frag.xml
+++ b/app/src/main/res/layout/history_frag.xml
@@ -1,18 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
->
+    android:layout_height="match_parent">
 
-    <TextView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/list"
+        android:name="com.samudev.spotlog.history.HistoryFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".history.HistoryFragment"
+        tools:listitem="@layout/song_log_item">
+
+    </android.support.v7.widget.RecyclerView>
+
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World~!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_centerInParent="true">
 
-</android.support.constraint.ConstraintLayout>
+        <TextView
+            android:id="@+id/noHistoryTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:textSize="24sp"
+            android:text="No History!"/>
+    </LinearLayout>
+
+</RelativeLayout>
