--- a/app/src/main/res/layout/song_log_item.xml
+++ b/app/src/main/res/layout/song_log_item.xml
@@ -5,40 +5,62 @@
     android:layout_height="56dp"
     android:orientation="horizontal"
     android:layout_marginTop="8dp"
-    android:layout_marginLeft="16dp"
-    android:layout_marginRight="16dp">
+    android:layout_marginLeft="12dp"
+    android:layout_marginRight="12dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical">
+        android:layout_gravity="center_vertical"
+        android:orientation="vertical"
+        android:layout_marginStart="12dp"
+        android:layout_marginEnd="12dp">
 
         <TextView
             android:id="@+id/song"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/text_margin"
+            android:maxLines="1"
+            android:textSize="16sp"
             android:textAppearance="?attr/textAppearanceListItem"
-            tools:text="Song"/>
+            tools:text="Track Name is very long indeeed"/>
 
-        <TextView
-            android:id="@+id/album"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/text_margin"
-            android:textAppearance="?attr/textAppearanceListItem"
-            tools:text="Album"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/artist"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/text_margin"
-            android:textAppearance="?attr/textAppearanceListItem"
-            tools:text="Album"/>
+            <TextView
+                android:id="@+id/artist"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:maxLines="1"
+                android:textSize="14sp"
+                android:textColor="#666666"
+                android:textAppearance="?attr/textAppearanceListItem"
+                tools:text="Artisnt name"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="4dp"
+                android:layout_marginEnd="4dp"
+                android:textSize="14sp"
+                android:textColor="#666666"
+                android:textAppearance="?attr/textAppearanceListItem"
+                android:text="-"/>
+
+            <TextView
+                android:id="@+id/album"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:maxLines="1"
+                android:textSize="14sp"
+                android:textColor="#666666"
+                android:textAppearance="?attr/textAppearanceListItem"
+                tools:text="Album name"/>
+
+        </LinearLayout>
 
     </LinearLayout>
-
-
 
 </android.support.v7.widget.CardView>
