add initial livedata impl

--- a/app/src/main/res/layout/history_frag.xml
+++ b/app/src/main/res/layout/history_frag.xml
@@ -10,7 +10,7 @@
         android:name="com.samudev.spotlog.history.HistoryFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".history.HistoryFragment"
+        tools:context=".history.LogFragment"
         tools:listitem="@layout/song_log_item">
 
     </android.support.v7.widget.RecyclerView>
