add databinding to list elements

--- a/app/src/main/res/layout/log_fragment.xml
+++ b/app/src/main/res/layout/log_fragment.xml
@@ -1,17 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
+
+<RelativeLayout
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/list"
+        android:id="@+id/song_list"
         android:name="com.samudev.spotlog.history.HistoryFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
         tools:context=".history.LogFragment"
-        tools:listitem="@layout/song_log_item">
+        tools:listitem="@layout/log_item">
 
     </android.support.v7.widget.RecyclerView>
 
@@ -30,3 +33,4 @@
     </LinearLayout>
 
 </RelativeLayout>
+</layout>
