--- a/app/src/main/res/menu/filter_songs.xml
+++ b/app/src/main/res/menu/filter_songs.xml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-    <menu xmlns:android="http://schemas.android.com/apk/res/android">
-        <item
-            android:id="@+id/one_hour"
-            android:title="@string/one_hour" />
-        <item
-            android:id="@+id/twelve_hours"
-            android:title="@string/twelve_hours" />
-        <item
-            android:id="@+id/all"
-            android:title="@string/all" />
-    </menu>
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <!-- Only for testing -->
+    <item
+        android:id="@+id/one_minute"
+        android:title="@string/one_minute" />
+    <item
+        android:id="@+id/one_hour"
+        android:title="@string/one_hour" />
+    <item
+        android:id="@+id/twelve_hours"
+        android:title="@string/twelve_hours" />
+    <item
+        android:id="@+id/all"
+        android:title="@string/all" />
+</menu>
