--- a/app/src/main/res/layout/log_fragment.xml
+++ b/app/src/main/res/layout/log_fragment.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layoutManager="android.support.v7.widget.LinearLayoutManager"
-        tools:context=".history.LogFragment"
+        tools:context=".log.LogFragment"
         tools:listitem="@layout/log_item">
 
     </android.support.v7.widget.RecyclerView>
