--- a/app/src/main/res/menu/log_fragment_menu.xml
+++ b/app/src/main/res/menu/log_fragment_menu.xml
@@ -10,4 +10,8 @@
         android:id="@+id/menu_clear"
         android:title="@string/menu_clear"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/menu_settings"
+        android:title="@string/menu_settings"
+        app:showAsAction="never" />
 </menu>
