--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -5,10 +5,10 @@
 <!-- TODO: add custom numberpicker preference for selecting log-timeout -->
 
     <SwitchPreference
-        android:key="preference_foreground"
-        android:title="Foreground service"
-        android:summaryOn="Foreground service is running"
-        android:summaryOff="Foreground service is off"
-        android:defaultValue="false" />
+        android:key="@string/pref_foreground_key"
+        android:title="@string/pref_foreground_title"
+        android:summaryOn="@string/pref_foreground_summary_on"
+        android:summaryOff="@string/pref_foreground_summary_off"
+        android:defaultValue="@bool/pref_foreground_default_value" />
 
 </PreferenceScreen>
