show date as system locale

--- a/app/src/main/res/layout/log_header.xml
+++ b/app/src/main/res/layout/log_header.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-        <variable name="date" type="java.time.LocalDate"/>
+        <variable name="date" type="String"/>
     </data>
 
     <LinearLayout
