--- a/app/src/main/res/layout/log_item.xml
+++ b/app/src/main/res/layout/log_item.xml
@@ -1,69 +1,94 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
         <variable name="song" type="com.samudev.spotlog.data.Song"/>
-        <variable name="clickListener" type="android.view.View.OnClickListener"/>
+        <variable name="clickListenerItem" type="android.view.View.OnClickListener"/>
+        <variable name="clickListenerPlay" type="android.view.View.OnClickListener"/>
     </data>
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="56dp"
-        android:orientation="horizontal"
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="12dp"
-        android:layout_marginRight="12dp"
-        android:onClick="@{clickListener}">
+        android:layout_marginRight="12dp">
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_gravity="center_vertical"
             android:orientation="vertical"
-            android:layout_marginStart="12dp"
-            android:layout_marginEnd="12dp">
-
-            <TextView
-                android:id="@+id/song_track"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:maxLines="1"
-                android:textSize="16sp"
-                android:textAppearance="?attr/textAppearanceListItem"
-                android:text="@{song.track}"
-                tools:text="Track Name is very long indeeed" />
+            android:paddingStart="12dp"
+            android:paddingEnd="12dp"
+            android:paddingTop="8dp"
+            android:paddingBottom="8dp">
 
             <LinearLayout
+                android:id="@+id/song_container"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_toStartOf="@id/play_button"
+                android:orientation="vertical"
+                android:onClick="@{clickListenerItem}">
 
                 <TextView
-                    android:id="@+id/song_artist"
-                    android:layout_width="wrap_content"
+                    android:id="@+id/song_track"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:maxLines="1"
-                    android:textSize="14sp"
-                    android:textColor="#666666"
+                    android:ellipsize="end"
+                    android:text="@{song.track}"
                     android:textAppearance="?attr/textAppearanceListItem"
-                    android:text="@{song.artist + ` - `}"
-                    tools:text="Artist name - "/>
+                    android:textSize="16sp"
+                    tools:text="Track Name is very long indeeedddddfffffffffffd " />
 
-                <TextView
-                    android:id="@+id/song_album"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:maxLines="1"
-                    android:textSize="14sp"
-                    android:textColor="#666666"
-                    android:textAppearance="?attr/textAppearanceListItem"
-                    android:text="@{song.album}"
-                    tools:text="Album name"/>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:id="@+id/song_artist"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:maxLines="1"
+                        android:ellipsize="end"
+                        android:text="@{song.artist + ` - `}"
+                        android:textAppearance="?attr/textAppearanceListItem"
+                        android:textColor="#666666"
+                        android:textSize="14sp"
+                        tools:text="Artist name - " />
+
+                    <TextView
+                        android:id="@+id/song_album"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:maxLines="1"
+                        android:ellipsize="end"
+                        android:text="@{song.album}"
+                        android:textAppearance="?attr/textAppearanceListItem"
+                        android:textColor="#666666"
+                        android:textSize="14sp"
+                        tools:text="Album name oh wow such l" />
+
+                </LinearLayout>
 
             </LinearLayout>
 
-        </LinearLayout>
+            <ImageView
+                android:id="@+id/play_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="4dp"
+                android:src="@drawable/ic_play_circle"
+                android:contentDescription="@string/btn_play"
+                android:onClick="@{clickListenerPlay}"/>
+
+        </RelativeLayout>
 
     </android.support.v7.widget.CardView>
 </layout>
