--- a/app/src/main/res/layout/log_item.xml
+++ b/app/src/main/res/layout/log_item.xml
@@ -18,7 +18,6 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_gravity="center_vertical"
             android:orientation="vertical"
             android:paddingStart="12dp"
             android:paddingEnd="12dp"
@@ -37,7 +36,6 @@
                     android:id="@+id/song_track"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:maxLines="1"
                     android:ellipsize="end"
                     android:text="@{song.track}"
                     android:textAppearance="?attr/textAppearanceListItem"
@@ -52,7 +50,6 @@
                         android:id="@+id/song_artist"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:maxLines="1"
                         android:ellipsize="end"
                         android:text="@{song.artist + ` - `}"
                         android:textAppearance="?attr/textAppearanceListItem"
@@ -64,13 +61,12 @@
                         android:id="@+id/song_album"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:maxLines="1"
                         android:ellipsize="end"
                         android:text="@{song.album}"
                         android:textAppearance="?attr/textAppearanceListItem"
                         android:textColor="#666666"
                         android:textSize="14sp"
-                        tools:text="Album name oh wow such l" />
+                        tools:text="Album name oh wow such looooooooongggggggggg" />
 
                 </LinearLayout>
 
