--- a/app/src/main/res/values/booleans.xml
+++ b/app/src/main/res/values/booleans.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <bool name="pref_foreground_default_value">true</bool>
+    <bool name="pref_foreground_default_value">false</bool>
 </resources>
