--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -18,12 +18,12 @@
         android:defaultValue="@integer/pref_log_size_default_value">
     </ListPreference>
 
-    <com.samudev.spotlog.preference.TimeoutPreference
+    <com.developments.samu.spotlog.preference.TimeoutPreference
         android:key="@string/pref_timeout_key"
         android:title="@string/pref_timeout_title"
         android:summary="@string/pref_timeout_summary"
         android:defaultValue="@string/pref_timeout_default_value">
-    </com.samudev.spotlog.preference.TimeoutPreference>
+    </com.developments.samu.spotlog.preference.TimeoutPreference>
 
 
 </PreferenceScreen>
