--- a/app/src/main/res/layout/log_header.xml
+++ b/app/src/main/res/layout/log_header.xml
@@ -11,7 +11,9 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_marginStart="12dp"
+        android:layout_marginLeft="12dp"
         android:layout_marginEnd="12dp"
+        android:layout_marginRight="12dp"
         android:layout_marginTop="4dp"
         android:layout_marginBottom="8dp"
         >
@@ -20,6 +22,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="2dp"
+            android:layout_marginLeft="2dp"
             android:text="@{date.toString()}"
             tools:text="2018-08-19"/>
 
