--- a/app/src/main/res/layout/log_item.xml
+++ b/app/src/main/res/layout/log_item.xml
@@ -12,25 +12,27 @@
         android:layout_width="match_parent"
         android:layout_height="56dp"
         android:layout_marginBottom="8dp"
+        android:layout_marginStart="12dp"
         android:layout_marginLeft="12dp"
+        android:layout_marginEnd="12dp"
         android:layout_marginRight="12dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:paddingStart="12dp"
-            android:paddingEnd="12dp"
-            android:paddingTop="8dp"
-            android:paddingBottom="8dp">
+            android:orientation="vertical">
 
             <LinearLayout
                 android:id="@+id/song_container"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_toStartOf="@id/play_button"
+                android:layout_toLeftOf="@id/play_button"
                 android:orientation="vertical"
-                android:onClick="@{clickListenerItem}">
+                android:gravity="center_vertical"
+                android:onClick="@{clickListenerItem}"
+                android:paddingStart="12dp"
+                android:paddingLeft="12dp">
 
                 <TextView
                     android:id="@+id/song_track"
@@ -40,7 +42,9 @@
                     android:text="@{song.track}"
                     android:textAppearance="?attr/textAppearanceListItem"
                     android:textSize="16sp"
-                    tools:text="Track Name is very long indeeedddddfffffffffffd " />
+                    tools:text="Track Name is very long inedeeeeeeeeeeeeeeeeeeeeeed"
+                    tools:singleLine="true"
+                    />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -55,7 +59,9 @@
                         android:textAppearance="?attr/textAppearanceListItem"
                         android:textColor="#666666"
                         android:textSize="14sp"
-                        tools:text="Artist name - " />
+                        tools:text="Artist name - "
+                        tools:singleLine="true"
+                        />
 
                     <TextView
                         android:id="@+id/song_album"
@@ -66,7 +72,9 @@
                         android:textAppearance="?attr/textAppearanceListItem"
                         android:textColor="#666666"
                         android:textSize="14sp"
-                        tools:text="Album name oh wow such looooooooongggggggggg" />
+                        tools:text="Album name oh wow such looooooooongggggggggg"
+                        tools:singleLine="true"
+                        />
 
                 </LinearLayout>
 
@@ -77,12 +85,18 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:layout_marginStart="8dp"
+                android:layout_marginLeft="8dp"
                 android:layout_marginEnd="4dp"
+                android:layout_marginRight="4dp"
                 android:src="@drawable/ic_play_circle"
                 android:contentDescription="@string/btn_play"
-                android:onClick="@{clickListenerPlay}"/>
+                android:onClick="@{clickListenerPlay}"
+                android:paddingEnd="12dp"
+                android:paddingRight="12dp"
+                />
 
         </RelativeLayout>
 
