--- a/app/src/main/res/menu/log_fragment_menu.xml
+++ b/app/src/main/res/menu/log_fragment_menu.xml
@@ -14,4 +14,8 @@
         android:id="@+id/menu_settings"
         android:title="@string/menu_settings"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/menu_export"
+        android:title="@string/menu_export"
+        app:showAsAction="never" />
 </menu>
