add undo-snackbar for delete and clear log

--- a/app/src/main/res/layout/log_fragment.xml
+++ b/app/src/main/res/layout/log_fragment.xml
@@ -12,6 +12,8 @@
         android:name="com.developments.com.spotlog.history.HistoryFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:scrollbars="vertical"
+        android:fadeScrollbars="true"
 
         app:layoutManager="android.support.v7.widget.LinearLayoutManager"
         tools:context=".log.LogFragment"
