--- a/app/src/main/res/layout/log_item.xml
+++ b/app/src/main/res/layout/log_item.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
         <variable name="song" type="com.developments.samu.spotlog.data.Song"/>
@@ -8,97 +9,89 @@
         <variable name="clickListenerPlay" type="android.view.View.OnClickListener"/>
     </data>
 
-    <android.support.v7.widget.CardView
+
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="56dp"
-        android:layout_marginBottom="8dp"
+        android:layout_height="64dp"
         android:layout_marginStart="12dp"
         android:layout_marginLeft="12dp"
         android:layout_marginEnd="12dp"
-        android:layout_marginRight="12dp">
+        android:layout_marginRight="12dp"
+        android:layout_marginBottom="8dp"
+        tools:layout_editor_absoluteX="1dp"
+        tools:layout_editor_absoluteY="169dp">
 
-        <RelativeLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="match_parent">
 
-            <LinearLayout
-                android:id="@+id/song_container"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_toStartOf="@id/play_button"
-                android:layout_toLeftOf="@id/play_button"
-                android:orientation="vertical"
-                android:gravity="center_vertical"
-                android:onClick="@{clickListenerItem}"
-                android:paddingStart="12dp"
-                android:paddingLeft="12dp">
 
-                <TextView
-                    android:id="@+id/song_track"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:ellipsize="end"
-                    android:text="@{song.track}"
-                    android:textAppearance="?attr/textAppearanceListItem"
-                    android:textSize="16sp"
-                    tools:text="Track Name is very long inedeeeeeeeeeeeeeeeeeeeeeed"
-                    tools:singleLine="true"
-                    />
+            <TextView
+                android:id="@+id/title_text"
+                style="@style/SongTitle"
+                android:layout_width="0dp"
+                android:layout_height="19dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:text="@{song.track}"
+                app:layout_constraintBottom_toTopOf="@+id/artist_text"
+                app:layout_constraintEnd_toStartOf="@+id/play_button"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:singleLine="true"
+                tools:text="Track Name is very long inedeeeeeeeeeeeeeeeeeeeeeed" />
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+            <TextView
+                android:id="@+id/artist_text"
+                style="@style/SongExtra"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@{song.artist + ` - `}"
+                app:layout_constraintBottom_toTopOf="@+id/time_text"
+                app:layout_constraintStart_toStartOf="@+id/title_text"
+                app:layout_constraintTop_toBottomOf="@+id/title_text"
+                tools:singleLine="true"
+                tools:text="Artist name - " />
 
-                    <TextView
-                        android:id="@+id/song_artist"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:ellipsize="end"
-                        android:text="@{song.artist + ` - `}"
-                        android:textAppearance="?attr/textAppearanceListItem"
-                        android:textColor="#666666"
-                        android:textSize="14sp"
-                        tools:text="Artist name - "
-                        tools:singleLine="true"
-                        />
+            <TextView
+                android:id="@+id/album_text"
+                style="@style/SongExtra"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="@{song.album}"
+                app:layout_constraintBaseline_toBaselineOf="@+id/artist_text"
+                app:layout_constraintEnd_toEndOf="@+id/title_text"
+                app:layout_constraintStart_toEndOf="@+id/artist_text"
+                tools:singleLine="true"
+                tools:text="Album name oh wow such looooooooongggggggggg" />
 
-                    <TextView
-                        android:id="@+id/song_album"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:ellipsize="end"
-                        android:text="@{song.album}"
-                        android:textAppearance="?attr/textAppearanceListItem"
-                        android:textColor="#666666"
-                        android:textSize="14sp"
-                        tools:text="Album name oh wow such looooooooongggggggggg"
-                        tools:singleLine="true"
-                        />
 
-                </LinearLayout>
-
-            </LinearLayout>
+            <TextView
+                android:id="@+id/time_text"
+                style="@style/SongExtra"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@{song.track}"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="@+id/artist_text"
+                app:layout_constraintTop_toBottomOf="@+id/artist_text"
+                tools:text="2:41 - 4:03" />
 
             <ImageView
                 android:id="@+id/play_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:layout_marginStart="8dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginEnd="4dp"
-                android:layout_marginRight="4dp"
-                android:src="@drawable/ic_play_circle"
-                android:contentDescription="@string/btn_play"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="8dp"
                 android:onClick="@{clickListenerPlay}"
-                android:paddingEnd="12dp"
-                android:paddingRight="12dp"
-                />
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/ic_play_circle" />
 
-        </RelativeLayout>
 
-    </android.support.v7.widget.CardView>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
+
 </layout>
