--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -2,7 +2,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:title="Preference Title">
 
-    <SwitchPreference
+    <SwitchPreferenceCompat
         android:key="@string/pref_foreground_key"
         android:title="@string/pref_foreground_title"
         android:summaryOn="@string/pref_foreground_summary_on"
