--- a/app/src/main/res/layout/log_item.xml
+++ b/app/src/main/res/layout/log_item.xml
@@ -30,7 +30,7 @@
                 android:id="@+id/title_text"
                 style="@style/SongTitle"
                 android:layout_width="0dp"
-                android:layout_height="19dp"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
                 android:text="@{song.track}"
@@ -51,7 +51,7 @@
                 app:layout_constraintStart_toStartOf="@+id/title_text"
                 app:layout_constraintTop_toBottomOf="@+id/title_text"
                 tools:singleLine="true"
-                tools:text="Artist name - " />
+                tools:text="Artist namge - " />
 
             <TextView
                 android:id="@+id/album_text"
