--- a/app/src/main/res/layout/log_item.xml
+++ b/app/src/main/res/layout/log_item.xml
@@ -5,6 +5,7 @@
 
     <data>
         <variable name="song" type="com.developments.samu.spotlog.data.Song"/>
+        <import type="com.developments.samu.spotlog.data.SongKt"/>
         <variable name="clickListenerItem" type="android.view.View.OnClickListener"/>
         <variable name="clickListenerPlay" type="android.view.View.OnClickListener"/>
     </data>
@@ -70,7 +71,7 @@
                 style="@style/SongExtra"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@{song.playbackPosition}"
+                android:text="@{SongKt.toPositionPrettyString(song)}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/artist_text"
                 app:layout_constraintTop_toBottomOf="@+id/artist_text"
