--- a/app/src/main/res/values/theme.xml
+++ b/app/src/main/res/values/theme.xml
@@ -12,8 +12,23 @@
         <item name="snackbarStyle">@style/AppSnackBarStyle</item>
         <item name="snackbarButtonStyle">@style/AppSnackButton</item>
 
+        <item name="materialAlertDialogTheme">@style/AppDialog</item>
+        <item name="alertDialogTheme">@style/AppDialog</item>
         <item name="colorListItemSecondary">#555555</item>
 
+    </style>
+
+    <style name="AppDialog" parent="ThemeOverlay.MaterialComponents.MaterialAlertDialog">
+        <item name="buttonBarPositiveButtonStyle">@style/AppDialogButton</item>
+        <item name="buttonBarNegativeButtonStyle">@style/AppDialogButton</item>
+    </style>
+
+    <style name="AppDialogButton" parent="Widget.MaterialComponents.Button.TextButton.Dialog">
+        <item name="materialThemeOverlay">@style/ThemeOverlay.App.Button</item>
+    </style>
+
+    <style name="ThemeOverlay.App.Button" parent="">
+        <item name="colorPrimary">@color/colorAccent</item>
     </style>
 
     <style name="AppActionBar" parent="@style/ThemeOverlay.MaterialComponents.Dark">
